# clickhawk

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_CN.md  LESSONS_LEARNED.md  LESSONS_LEARNED_CN.md  README.md  README_CN.md  STRUCTURE.md  STRUCTURE_CN.md  TUTORIAL.md  TUTORIAL_CN.md  clickhawk-plan.docx  lessons_learned.md  main.py  pyproject.toml  structure.md  tutorial.md
clickhawk/: main.py
clickhawk/commands/: check.py  explain.py  export.py  kill.py  migrate.py  monitor.py  profile.py  query.py  schema.py  slowlog.py  top.py
clickhawk/formatters/: table.py
clickhawk/utils/: sql.py
commands/: migrate.py  monitor.py  slowlog.py
core/: client.py  config.py
examples/: BASIC_QUERY.md  BASIC_QUERY_CN.md  MONITORING.md  MONITORING_CN.md  PROFILING.md  PROFILING_CN.md  SCHEMA_EXPLORATION.md  SCHEMA_EXPLORATION_CN.md  basic_query.md  monitoring.md  profiling.md  schema_exploration.md
formatters/: tree.py
tests/: conftest.py
tests/integration/: conftest.py  test_check.py  test_explain.py  test_export.py  test_health.py  test_kill.py  test_migrate.py  test_profile.py  test_query.py  test_schema.py  test_slowlog.py  test_top.py
tests/unit/: test_config.py  test_formatters.py  test_query_logic.py
