[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickhawk"
version = "0.2.0"
description = "The ClickHouse CLI for data engineers — query, profile, debug, migrate."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Victor", email = "zhenning.li@kaiko.com" }]
keywords = ["clickhouse", "cli", "data-engineering", "olap", "profiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "clickhouse-connect>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ch = "clickhawk.main:app"

[tool.hatch.build.targets.wheel]
packages = ["clickhawk"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running ClickHouse instance"]
